feat: authentication using mui elements

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,6 +22,8 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  position: relative;
+  overflow: hidden;
 }
 
 .App-link {
@@ -35,4 +37,24 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.App-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.App-header-buttons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.App-header RegisterButton {
+  margin-left: 10px;
 }
