feat: profile page

--- a/client/src/style/ProfilePage.css
+++ b/client/src/style/ProfilePage.css
@@ -7,13 +7,44 @@
 }
 
 .profile-paper {
-  padding: 2rem;
-  max-width: 600px;
-  width: 100%;
   background-color: var(--background-paper);
-  color: var(--text-primary);
+  padding: 2rem;
+  border-radius: 8px;
+  width: 95%;
 }
 
-.logout-button {
-  margin-top: 1rem;
+.profile-content {
+  display: flex;
+  align-items: left;
+  gap: 2rem;
+  margin-bottom: 2rem;
+  flex-direction: column;
+}
+
+.profile-image-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1rem;
+}
+
+.profile-image {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 3px solid var(--secondary-main);
+  object-fit: cover;
+}
+
+.profile-username {
+  font-weight: bold;
+  color: var(--primary-main);
+} 
+
+.profile-subheader-container {
+  margin-top: 2rem;
+}
+
+.profile-subheader-text {
+  color: var(--text-primary);
 }
